# glomeruli-segmentation

./: .dockerignore  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.packaged  LICENSE  README.md  _notes  annotation_handler.py  api.py  build_container.sh  configuration.json  dMmHbbAEfwccnRg  debug.sh  demo.py  ead-app-schema-draft-1.json  ead.json  environment.yml  glomeruli-segmentation.json  glomeruli_segmentation.coverage  hacking-kidney-ead.code-workspace  hubmap_hacking_kidney.json  inference.py  install_test_suite.sh  job.env  kidney_segmentation_app.json  main.py  model.json  pyproject.toml  register_job.sh  requirements.txt  run_test_suite_container.sh  serialize_model.py  setup.sh  start_container.sh  test-requirements.txt  test.py  (+3 more)
app/: api.py  data_types.py  entity_extractor.py  inference_runner.py  mock_api.py  schema.py  serializer.py
data/: __init__.py  data_processing.py  dataset.py  postprocessing.py  preprocessing.py  tifffile_dataset.py  wsi_data_loader.py  wsi_tile_fetcher.py
glomeruli_segmentation/: __main__.py  _version.py  aiohttp_hooks.py  api_interface.py  config.py  data_classes.py  entity_extractor.py  extract_contours.py  extract_results.py  get_patches.py  inference.py  logging_tools.py  main.py  output_serialization.py  request_hooks.py  run_inference.py  serialization.py  tile_loader.py
glomeruli_segmentation/data/: rle.py  tifffile_dataset.py
glomeruli_segmentation/model/: __init__.py  segnet.py  unet.py
glomeruli_segmentation/model/basenet/: __init__.py  tf_like.py  utils.py
glomeruli_segmentation/util/: __init__.py  combine_masks.py  preprocessing.py
hubmap_hacking_kidney/: demo.py  main.py
hubmap_hacking_kidney/app/: api.py  inference_runner.py  mock_api.py  serializer.py
hubmap_hacking_kidney/data/: __init__.py  dataset.py
hubmap_hacking_kidney/tests/: testInferenceRunner.py
inputs/: kidney_wsi.json  my_rectangle.json  region_of_interest.json  rois.json  slide.json
nn/: __init__.py  segnet.py
nn/basenet/: __init__.py  utils.py
src/: api.py  cem_main.py  demo.py  environment.yml  inference.py  main.py
src/app/: api_interface.py  data_classes.py  data_types.py  entity_extractor.py  inference.py  inference_runner.py  logging_tools.py  mock_api.py  model_api.py  output_serializer.py  request_hooks.py  tile_loader.py
src/data/: __init__.py  dataset.py  postprocessing.py  preprocessing.py  rle.py  tile_fetcher.py  wsi_data_loader.py  wsi_dataset.py  wsi_tile_fetcher.py
src/nn/: __init__.py  segnet.py  unet.py
src/nn/basenet/: __init__.py  basic.py  scse.py  tf_like.py
src/tests/: mock_api.py  testApiInterface.py  testCombineTiles.py  testInferenceRunner.py  testWsiDataset.py  test_combine_masks.py  test_combine_tiles.py  test_data_classes.py  test_inference.py  test_tile_loader.py
src/util/: combine_masks.py  combine_tiles.py
tests/: config_invalid.json  helper_methods.py  mock_api.py  testInferenceRunner.py  testWsiDataset.py  test_combine_masks.py  test_config_loading.py  test_data_classes.py  test_extract_annotations.py  test_extract_results.py  test_inference.py  test_patch_loader.py  test_tile_loader.py
