[tool.poetry]
name = "glomeruli-segmentation"
version = "0.2.0"
description = "Kidney segmentation demo app, as per https://www.kaggle.com/c/hubmap-kidney-segmentation, developed for integration with the EMPAIA platform"
authors = ["Theodore Evans <theodore.evans@dai-labor.de>", "Emirhan Karagül <emirhan.karaguel@tu-berlin.de>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "glomeruli_segmentation" }
]

[tool.poetry.dependencies]
python = "^3.8.1"
torch = "^1.8.0"
torchvision = "^0.9.1"
opencv_python = "^4.5.1.48"
requests = "^2.25"
numpy = "^1.20.2"
Pillow = "^8.2.0"
imagecodecs = "^2021.4.28"
marshmallow = "^3.14.1"
desert = "^2020.11.18"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b0", allow-prereleases = true}
isort = "5.8.0"
openslide-python = "^1.1.2"
coverage = "4.5.2"
pytest = "5.2.0"
pytest-cov = "2.6.1"
pytest-flakes = "2.0.0"
pytest-pep8 = "^1.0.6"
pytest-pythonpath = "^0.7.3"
docker = "^5.0.3"

[tool.black]
line-length = 110
target-version = ['py38']

[tool.portray]
modules = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
