[tool.poetry]
name = "glomeruli-segmentation"
version = "0.2.0"
description = "Kidney segmentation demo app, as per https://www.kaggle.com/c/hubmap-kidney-segmentation, developed for integration with the EMPAIA platform"
authors = ["Theodore Evans <theodore.evans@dai-labor.de>", "Emirhan Karagül <emirhan.karaguel@tu-berlin.de>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "glomeruli_segmentation" }
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
opencv_python = "^4.5.1.48"
requests = "^2.25"
Pillow = "^8.3.2"
imagecodecs = "^2021.4.28"
numpy = "^1.20.2"
torch = "1.8.1"
torchvision = "0.9.1"
marshmallow-union = "^0.1.15"
marshmallow = "^3.14.1"
desert = "^2020.11.18"
koila = "^0.1.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b0", allow-prereleases = true}
isort = "5.8.0"
openslide-python = "^1.1.2"
coverage = "4.5.2"
pytest = "5.2.0"
pytest-cov = "2.6.1"
pytest-flakes = "2.0.0"
pytest-pep8 = "^1.0.6"
pytest-pythonpath = "^0.7.3"
matplotlib = "^3.5.1"
ipykernel = "^6.6.1"
scipy = "^1.7.3"
data-science-types = "^0.2.23"
types-requests = "^2.26.3"
pycodestyle = "^2.8.0"
pylint = "^2.12.2"
pre-commit = "^2.16.0"
seed-isort-config = "^2.2.0"
click = "7.1.2"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["PIL", "cv2", "desert", "marshmallow", "matplotlib", "numpy", "pytest", "requests", "scipy", "torch", "torchvision"]

[tool.portray]
modules = ["src"]

[tool.pylint.master]
ignore = ["model"]
extension-pkg-whitelist=["cv2","torch"]
generated-members=["cv2", "torch"]

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "R,C,W0613,W0511,W0703,W0212,E0611,E1101,E0401"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
