[tool.poetry]
name = "glomeruli-segmentation"
version = "2.0.0-alpha.1"
description = "Kidney segmentation demo app, as per https://www.kaggle.com/c/hubmap-kidney-segmentation, developed for integration with the EMPAIA platform"
authors = ["Theodore Evans <theodore.evans@dai-labor.de>", "Emirhan Karagül <emirhan.karaguel@tu-berlin.de>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "glomeruli_segmentation" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Pillow = "^9.0.1"
imagecodecs = "^2021.4.28"
numpy = "^1.22.3"
padl = "^0.2.5"
torch = "^1.11.0"
torchvision = "^0.12.0"
opencv-python = "^4.5.5"
aiohttp = "^3.8.1"
marshmallow = "^3.15.0"
desert = "^2020.11.18"
marshmallow-enum = "^1.5.1"
marshmallow-union = "^0.1.15"
zarr = "^2.11.3"
Shapely = "^1.7.0"

[tool.poetry.dev-dependencies]
empaia-app-test-suite = "^2.0.2"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.18.1"
pylint = "^2.13.7"
matplotlib = "^3.5.1"
openslide-python = "^1.1.2"
debugpy = "^1.6.0"
ipykernel = "^6.13.0"
pytest = "^7.1.2"
scipy = "^1.8.0"
notebook = "^6.4.11"
pandas = "^1.4.2"

[tool.black]
line_length = 120
target-version = ['py310']

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["PIL", "aiohttp", "cv2", "desert", "marshmallow", "matplotlib", "numpy", "padl", "pytest", "requests", "scipy", "torch", "torchvision"]

[tool.portray]
modules = ["src"]

[tool.pylint.master]
ignore = ["model"]
extension-pkg-whitelist=["cv2","torch"]
generated-members=["cv2", "torch"]

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "R,C,W0613,W0511,W0703,W0212,E0611,E1101,E0401,W1203"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
